--- a/src/pages/AboutMe/aboutme.module.scss
+++ b/src/pages/AboutMe/aboutme.module.scss
@@ -43,8 +43,12 @@
   strong { font-size: inherit; font-family: inherit; font-weight: 900; }
 }
 
-// .random { transition: all ease 0.5s; }
-
-// .services-item:hover .random {
-//   transform: translateX(15%);
-// }
+@media(max-width: 900px) {
+  .message-container { 
+    padding: 0 10px;
+    h1 { font-size: 25px; font-family: 'Courier New', Courier, monospace; }
+    h2 { font-size: 18px; font-family: 'Courier New', Courier, monospace; }
+    span { font-size: inherit; font-family: inherit; color: blue; }
+    strong { font-size: inherit; font-family: inherit; font-weight: 900; }
+  }
+}
