--- a/src/components/NavigationMobile/navigationmobile.module.scss
+++ b/src/components/NavigationMobile/navigationmobile.module.scss
@@ -12,10 +12,10 @@
   position: absolute;
   top: 80px;
   left: 0;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 
   width: 100%;
-  max-width: 350px;
+  // max-width: 350px;
   color: white;
   ul { list-style: none; }
 }
