--- a/src/pages/Contact/contact.module.scss
+++ b/src/pages/Contact/contact.module.scss
@@ -70,6 +70,7 @@
   font-weight: 900;
   text-align: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 300px;
