--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,23 +18,23 @@ html, body {
 
 @layer base {
   h1 {
-    @apply text-2xl font-bold md:text-4xl;
+    @apply font-bold;
   }
 
   h2 {
-    @apply text-xl font-bold md:text-3xl;
+    @apply font-bold;
   }
 
   h3 {
-    @apply text-lg font-bold md:text-2xl;
+    @apply font-bold;
   }
 
   h4 {
-    @apply text-base font-bold md:text-lg;
+    @apply font-bold;
   }
 
-  body {
-    @apply text-sm md:text-base;
+  p {
+    @apply mb-4
   }
 }
 
